--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-  pull-request:
+  pull_request:
 
 jobs:
   run-tests:
@@ -35,6 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: python -m pip install pytest .
+        run: pip install -r requirements.txt
 
       - name: Run tests
         run: pytest
