--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install pytest . 
+          pip install -r requirements.txt
 
       - name: Run tests
         run: pytest
