--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install pytest . 
+          python -m pip install pytest 
           pip install -r requirements.txt
 
       - name: Run tests
