--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
         run: |
           python -m pip install pytest 
           pip install -r requirements.txt
+          python app.py
 
       - name: Run tests
         run: pytest
