--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,9 +35,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           python -m pip install pytest 
           pip install -r requirements.txt
-          python app.py
 
       - name: Run tests
         run: pytest
