--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+          pip install .
           python -m pip install pytest 
           pip install -r requirements.txt
 
