--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,14 +11,14 @@ jobs:
       matrix: 
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: 
-          - "3.7"
+          #- "3.7", Error: The version '3.7' with architecture 'arm64' was not found for 'os'
           - "3.8"
           - "3.9"
           - "3.10"
           - "3.11"
           - "3.12-dev"
-          - "pypy-3.7"
-          #- "pypy-3.8"
+          #- "pypy-3.7"
+          - "pypy-3.8"
           #- "pypy-3.9"
 
     name: Test
