--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,5 +40,7 @@ jobs:
           python -m pip install pytest 
           pip install -r requirements.txt
 
+      - name: Install package
+        run: pip install -e .
       - name: Run tests
         run: pytest
