--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,10 +37,9 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install .
+          pip install -e .
           python -m pip install pytest 
           pip install -r requirements.txt
 
-      - name: Install package
-        run: pip install -e .
       - name: Run tests
-        run: pytest
+        run: python -m pytest -v
