change install -e to be under install package

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,9 +37,11 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install .
-          pip install -e .
           python -m pip install pytest 
           pip install -r requirements.txt
+
+      - name: Install package
+        run: pip install --upgrade pip && pip install -e .
 
       - name: Run tests
         run: python -m pytest -v
