--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,4 +44,6 @@ jobs:
 #        run: pip install --upgrade pip && pip install -e .
 
       - name: Run tests
-        run: python -m pytest -v
+        run: |
+          export PYTHONPATH=$PWD
+          python -m pytest -v
