--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,8 @@ jobs:
           pip install -e .
           python -m pip install pytest 
           pip install -r requirements.txt
+          pip install pytest
+          pip install pytest-mock
 
 #      - name: Install package
 #        run: pip install --upgrade pip && pip install -e .
