--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,12 +40,11 @@ jobs:
           python -m pip install pytest 
           pip install -r requirements.txt
           pip install pytest
-          pip install pytest-mock
+          pip install --force-reinstall pytest pytest-mock
 
 #      - name: Install package
 #        run: pip install --upgrade pip && pip install -e .
 
       - name: Run tests
         run: |
-          export PYTHONPATH=$PWD
           python -m pytest -v
