added python path to toml, changed imports to service only, AND also changed the mocker.patch (removed CISC_327_CS from the start)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ requires-python = ">=3.7"
 [tool.setuptools]
 py-modules = ["app", "database", "library_service"]  # Your standalone files
 packages = ["routes"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
