removed working directory from ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,4 +48,4 @@ jobs:
       - name: Run tests
         run: |
           python -m pytest -v
-        working-directory: ./CISC_327_CS
+        #working-directory: ./CISC_327_CS
