adding playwright depenedencies in ci.yaml file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,8 @@ jobs:
           pip install pytest
           pip install pytest-cov
           pip install --force-reinstall pytest pytest-mock
+          pip install pytest-playwright
+          playwright install
 
 #      - name: Install package
 #        run: pip install --upgrade pip && pip install -e .
