--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,15 +11,11 @@ jobs:
       matrix: 
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: 
-          #- "3.7", Error: The version '3.7' with architecture 'arm64' was not found for 'os'
           - "3.8"
           - "3.9"
           - "3.10"
           - "3.11"
           - "3.12-dev"
-          #- "pypy-3.7"
-          #- "pypy-3.8" #Database error occurred while creating borrow record. (not my code where the error is)
-          #- "pypy-3.9"
 
     name: Test
     runs-on: ${{ matrix.os }}
@@ -45,13 +41,17 @@ jobs:
           pip install pytest-playwright
           playwright install
 
-#      - name: Install package
-#        run: pip install --upgrade pip && pip install -e .
+      - name: Run Flask     # And save process ID
+        run: |
+          python app.py & 
+          echo $! > flask.pid
+          sleep 5
 
       - name: Run tests
         run: |
-          python app.py
           python -m pytest -v
           python -m pytest --cov=services --cov=. --cov-report=xml --cov-report=term -v
           python -m pytest --cov=services --cov=. --cov-branch --cov-report=xml --cov-report=term -v
-        #pytest --cov=services --cov-report=html --cov-report=term tests/
+
+      - name: Stop Flask app
+        run: kill $(cat flask.pid)
