--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,12 +52,13 @@ jobs:
         run: |
           docker pull charlottesmith826/library-app:v1
           docker run -d -p 5000:5000 --name flask-app charlottesmith826/library-app:v1
+          sleep 10
 
-      - name: Wait for App Start-up
-        run: |
-          for i in {1..30}; docker
-            curl -f http://localhost:5000 && break || sleep 1
-          done
+      # - name: Wait for App Start-up
+      #   run: |
+      #     for i in {1..30}; docker
+      #       curl -f http://localhost:5000 && break || sleep 1
+      #     done
 
       - name: Run tests
         run: |
