--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]  # [ubuntu-latest, macos-latest, windows-latest]
         python-version: 
           - "3.8"
           - "3.9"
@@ -41,24 +41,17 @@ jobs:
           pip install pytest-playwright
           playwright install
 
-      # - name: Run Flask     # And save process ID
-      #   run: |
-      #     python app.py & 
-      #     echo $! > flask.pid
-      #     sleep 5
-      #   shell: bash
-
-      - name: Pull and run Docker container
+      - name: Run Flask     # And save process ID
         run: |
-          docker pull charlottesmith826/library-app:v1
-          docker run -d -p 5000:5000 --name flask-app charlottesmith826/library-app:v1
-          sleep 10
+          python app.py & 
+          echo $! > flask.pid
+          sleep 5
 
-      # - name: Wait for App Start-up
+      # - name: Pull and run Docker container
       #   run: |
-      #     for i in {1..30}; docker
-      #       curl -f http://localhost:5000 && break || sleep 1
-      #     done
+      #     docker pull charlottesmith826/library-app:v1
+      #     docker run -d -p 5000:5000 --name flask-app charlottesmith826/library-app:v1
+      #     sleep 10
 
       - name: Run tests
         run: |
@@ -66,9 +59,9 @@ jobs:
           python -m pytest --cov=services --cov=. --cov-report=xml --cov-report=term -v
           python -m pytest --cov=services --cov=. --cov-branch --cov-report=xml --cov-report=term -v
 
-      - name: Stop container
-        run: docker stop flask-app
-        if: always()
+      # - name: Stop container
+      #   run: docker stop flask-app
+      #   if: always()
 
-      # - name: Stop Flask app
-      #   run: kill $(cat flask.pid)
+      - name: Stop Flask app
+        run: kill $(cat flask.pid)
